# unigine-geometry-nodes

./: .gitignore  LICENSE  README.md  build_plugin.py
source/GeometryNodesPlugin/: BlendAsset.cpp  BlendAsset.h  BlenderProcess.cpp  BlenderProcess.h  CMakeLists.txt  GNData.h  GeometryNodesPlugin.cpp  GeometryNodesPlugin.h  GeometryNodesPlugin.json  geonodes.py
source/GeometryNodesPlugin/Gui/: AbstractSpinBox.cpp  AbstractSpinBox.h  ColorWidget.cpp  ColorWidget.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  NodeWidget.cpp  NodeWidget.h  SpinBoxDouble.cpp  SpinBoxDouble.h  SpinBoxInt.cpp  SpinBoxInt.h  TripleSpinBox.cpp  TripleSpinBox.h  bgn_resources.qrc
source/GeometryNodesPlugin/utils/: CallbackGuard.h
source/cmake/modules/: FindEditor.cmake  FindEngine.cmake
